<resources>
    <string name="app_name">Steven Skrbec</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="nav_intro">Welcome</string>
    <string name="nav_propro">My Professional Profile</string>
    <string name="nav_experties">My Strengths</string>
    <string name="nav_proexp">My Experience in Android Developing</string>
    <string name="nav_freelance">My Freelance Projects</string>
    <string name="nav_about_me">Who Am I?</string>
    <string-array name="nav_item_activity_titles">
        <item>Welcome</item>
        <item>Professional Profile</item>
        <item>Strengths</item>
        <item>Experience</item>
        <item>Freelance Projects</item>
        <item>I am</item>
    </string-array>
    <string name="activity_title_about_me">I AM</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">EXIT APP</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="bttnsnd">SEND</string>
    <string name="btncancel">EXIT</string>
    <string name="emailme">Email me?</string>
    <string name="privacy_text">
     <![CDATA[
<b>Privacy Policy</b><br>

Steven Skrbec built the Steven Skrbec app as a Free app. This SERVICE is provided by Steven Skrbec at no cost and is intended for use as is.

This page is used to inform website visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.

If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.<br>

The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Steven Skrbec unless otherwise defined in this Privacy Policy.<br>
<br>
<b>Information Collection and Use</b><br>

For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information. The information that I request is retained on your device and is not collected by me in any way

The app does use third party services that may collect information used to identify you.

Link to privacy policy of third party service providers used by the app<br>
<br>
   <b><a href="https://play.google.com/store">Google Play Services</b></a><br>

<br><b>Log Data</b><br>

I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.
<br><br>
<b>Cookies</b><br>

Cookies are files with small amount of data that is commonly used an anonymous unique identifier. These are sent to your browser from the website that you visit and are stored on your device internal memory.

This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collection information and to improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.<br>
<br>
<b>Service Providers</b><Br>

I may employ third-party companies and individuals due to the following reasons:
<br><sub>
    To facilitate our Service;<br>
    To provide the Service on our behalf;<br>
    To perform Service-related services; or<br>
    To assist us in analyzing how our Service is used.<br>
</sub><br>
I want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.<br>
<br>
<b>Security</b><br>

I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.<br>
<br>
<b>Links to Other Sites</b><br>

This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.<br>
<br>
<b>Children’s Privacy</b><br>

These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions.

Changes to This Privacy Policy

I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.
<br><br>
<b>Contact Us</b><br>

If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me.

]]>
</string>
    <string name="experience_text">
         <![CDATA[
I always wanted to become an android developer, always tinkered at developing Android applications and Reusing old code for new applications.<br><br>
I would always delete the whole project and start over from the beginning to more understand how it works.<br><br>
All the different ways of developing an Android Application at first can be a little a little overwhelming, all the “strings, XML, imports, if statements”, even compiling, but after some time I would understand the workings and why this does what it does.<br><br>
Developing an android application should have good planning, yes you can click on that "Android Studio" icon and start coding away, but the more the application comes alive, the more you wish you planned it all out in the beginning.

<br><br>
         ]]>
    </string>
    <string name="whoami_text">
        <![CDATA[
        a fun (a little goofy at times), friendly,  and tech-savvy nerd,  I develop computer programs and write code in my spare time.  I firmly believe brilliance equals creativity and nerdy-ness.<br><br>
Developing mobile applications and software programs can make a global impact, picturing new ways technology can affect lives around the world; and I want to be apart of that impact. <br><br>
I like to immerse myself in the coding language and sharing with others what I have taught myself or what other have taught me.  I do feel fulfilled when solving problems using the knowledge I have learned over time.<br><br>

I am exceptionally focused when developing Android applications, hours can feel like just a few minutes.  I am highly detailed-oriented, with outstanding work ethics; determined to solve problems no matter what it is, and very driven to constantly learn to advance myself and my knowledge.<br><br>

I believe myself to be a passionate learner and push myself to learn new things every day.<br><br>
        ]]>
    </string>
    <string name="girl_text">
        <![CDATA[

GIRL was my very first android application I developed, with that being said it was rated a 4.5 out of a 5 star.
GIRL got half a million downloads within a 6 month time.  Everyone from Android phone to tablet was able to download this application.
The application had a TAG it button, when your favorite song is playing you would have the ability to tag it to your Facebook page with a link so others can download GIRL application was well.

]]>

    </string>
    <string name="caribou_text">
        <![CDATA[
Caribou Coffee was a unique application, when I was developing it.
It never got published due to Caribou Coffee developing its own application internally.
It had a fadin, fadout splash screen while downloading the new content.
It allowed Facebook postings, store locations, and eventually would have had the ability to pay with gift card built into the app and a points system.
]]>

    </string>
    <string name="ksu_text">
        <![CDATA[

This Android Application allowed you to see current events going on at KSU.  You also had the ability to watch LIVE the broadcasters broadcasting.  This application didn’t get very many downloads because it was designed for KSU students only.
]]>
    </string>
    <string name="whenicrave_text">
            <![CDATA[
WhenICrave for android had it own unique touch as well.  It had the ability to find out where food is in your area that you are craving.  Most of the functions were json calls to the website to get the search results.  We also built and ad space so companies would be able to sign up and pay for ad space on the website and application allowing WhenICrave to be FREE for download but the company I built WhenICrave for decided to go private with it.
]]>

    </string>
<string name="jdavis_text">
    <![CDATA[
Sometimes even artist needs an Android application.  This Android application allowed users to set the artists art as wallpaper.  It allowed you to pick between six different art designs.  The concept of the application was to have all the artists’ art in a single android application.
]]>
</string>
    <string name="shiftgears365_text">
        <![CDATA[
        This application was a very busy application, its ability to get employee phones numbers for the company so you no longer need to put them into your personal contacts.  It also had the ability to set the alarm clock and forget it, the alarm would only go off on the time you wanted it go for example; if you worked at 9a.m. on Monday and 11am on Tuesday, also 6pm on Thursday you could set Shift Gears 365 for Android to have the alarm go off 2 hours before each shift.
Shift Gears 365 also had the ability to swap shifts with others, give away a shift, and even request vacation time.  Schedules could be viewed by Month, Day, and Week. You also had the ability to see who you are working with; each request for Shift Gears 365 was a API call using json, PHP, Mysql, SQlite.  Auto downloading schedules was a snap, just pick “auto download” and the time you wanted to download or sync the schedule, or manual download the schedule for some people that don’t have unlimited data.
        ]]>

</string>
    <string name="intro_text">
        <![CDATA[<br>
                Welcome to my Android Application.<br><br> Always remember the golden rule in application development.<br>

]]>
    </string>
</resources>