<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/roundlayout">

    <ImageButton
        android:id="@+id/ib_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close_white_24dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@null"
        />
<RelativeLayout
    android:layout_width="fill_parent"
    android:background="@color/white"
    android:layout_height="75px"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/emailme"
        android:gravity="center"
        android:textColor="@color/black"
        />


</RelativeLayout>
    <EditText
        android:id="@+id/editText_popup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="textMultiLine"
        android:lines="12"
        android:minLines="12"
        android:overScrollMode="always"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:textColor="#00ffdd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnsend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="false"
            android:layout_weight="0.5"
            android:text="@string/bttnsnd"
            />

        <Button
            android:id="@+id/btncancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/btncancel"
            />

    </LinearLayout>
</RelativeLayout>