<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <RelativeLayout
        android:id="@+id/RelativeLayout01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <LinearLayout
            android:id="@+id/linear_girl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/border"

            >

            <ImageView
                android:id="@+id/girl_imageview"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/girl2" />

            <TextView
                android:id="@+id/girl_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="0dp"
                android:drawablePadding="0dp"
                android:paddingLeft="20dp"
                android:text="@string/girl_text"
                android:textSize="14sp"
                android:divider="?android:dividerHorizontal"
                android:showDividers="middle"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_ksuowlradio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_girl"
            android:background="@drawable/border">

            <ImageView
                android:id="@+id/ksu_imageview"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ksuowlradio" />

            <TextView
                android:id="@+id/ksu_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="0dp"
                android:drawablePadding="0dp"
                android:paddingLeft="20dp"
                android:text="@string/ksu_text"

                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_cariboucoffee"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/linear_ksuowlradio"
            android:orientation="horizontal"
            android:background="@drawable/border"
            >

            <ImageView
                android:id="@+id/caribou_imageviw"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/cariboucoffee" />

            <TextView
                android:id="@+id/caribou_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="0dp"
                android:drawablePadding="0dp"
                android:paddingLeft="20dp"
                android:text="@string/caribou_text"

                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_jdaviswallpapergallery"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/linear_cariboucoffee"
            android:orientation="horizontal"
            android:background="@drawable/border"
            >

            <ImageView

                android:id="@+id/jdavis_imageview"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/jdaviswallpapergallery" />

            <TextView
                android:id="@+id/jdavis_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="0dp"
                android:drawablePadding="0dp"
                android:paddingLeft="20dp"
                android:text="@string/jdavis_text" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linear_whenicrave"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/linear_jdaviswallpapergallery"
            android:orientation="horizontal"
            android:background="@drawable/border"
            >

            <ImageView
                android:id="@+id/whenicrave_imageview"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/whenicrave" />

            <TextView
                android:id="@+id/whenicrave_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="0dp"
                android:drawablePadding="0dp"
                android:paddingLeft="20dp"
                android:text="@string/whenicrave_text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_shiftgears365"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/linear_whenicrave"
            android:orientation="horizontal"
            android:background="@drawable/border"
            >

            <ImageView
                android:id="@+id/shiftgears_imageview"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/shiftgears365" />

            <TextView
                android:id="@+id/shiftgears_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="0dp"
                android:drawablePadding="0dp"
                android:paddingLeft="20dp"
                android:text="@string/shiftgears365_text" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>